Standardregelwerk #10 adapt territory calculation refactor some game part